rewrite fav methods

--- a/BK_Details_App/BK_Details_App.csproj
+++ b/BK_Details_App/BK_Details_App.csproj
@@ -39,6 +39,12 @@
   </ItemGroup>
 
   <ItemGroup>
+    <Compile Update="Views\FavouritesView.axaml.cs">
+      <DependentUpon>FavouritesView.axaml</DependentUpon>
+    </Compile>
+  </ItemGroup>
+
+  <ItemGroup>
     <None Update="Materials\materials.xlsx">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
