--- a/BK_Details_App/BK_Details_App.csproj
+++ b/BK_Details_App/BK_Details_App.csproj
@@ -36,6 +36,7 @@
     <PackageReference Include="ClosedXML" Version="0.101.0" />
     <PackageReference Include="ClosedXML.Parser" Version="1.3.0" />
     <PackageReference Include="CommunityToolkit.Mvvm" Version="8.4.0" />
+    <PackageReference Include="CsvHelper" Version="33.0.1" />
     <PackageReference Include="FuzzySharp" Version="2.0.2" />
     <PackageReference Include="MessageBox.Avalonia" Version="3.2.0" />
     <PackageReference Include="ExcelDataReader" Version="3.7.0" />
@@ -48,5 +49,9 @@
     <None Update="Materials\materials.xlsx">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
+  </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="Materials\" />
   </ItemGroup>
 </Project>
